src/style/layout/_navigation.sass
@import '../base/variables'

header,
footer
    nav
        box-shadow: 0 0 3px rgba(51, 51, 51, 0.46)
        position: absolute
        background-color: $nav-bg-color
        z-index: 10
        width: 100%
        height: $nav-bar-height
        display: flex
        flex-direction: row
        justify-content: space-between
        .flex-sides
            flex: 1 1 0
            width: 0
            min-width: max-content
        &.nav-photo
            .photo-title
                display: inline-block
                margin-top: $nav-item-space
                padding: $nav-item-space calc(#{$nav-item-space} * 3 / 2)
            @media (max-width: 1024px)
                .photo-title
                    position: absolute
                    background-color: rgb(255, 255, 255, 0.5)
                    text-align: center
                    color: #000
                    *
                        display: inline-block
                    .short-item a
                        color: #000 !important
                        text-decoration: rgba(0, 0, 0, 0.4) wavy underline
                        &:hover,
                        &:focus
                            background-color: inherit
                            text-decoration: #000 wavy underline
                @media (orientation: landscape)
                    top: 0
                    width: calc(#{$nav-bar-height} + 1px)
                    flex-direction: column
                    height: 100vh
                    .photo-title
                        bottom: 0.3rem
                        left: calc(#{$nav-bar-height} + 4px) /* 4px to keep distance from the shadow on the nav bar */
                        width: calc(100vw - 2 * (#{$nav-bar-height} + 4px))
                @media (orientation: portrait)
                    .photo-title
                        top: $nav-bar-height
                        left: 0
                        width: 100vw
            .flex-sides
                @media (max-width: 1024px) and (orientation: landscape)
                    flex: inherit
                    min-width: inherit
        .flex-right
            text-align: right
        .long-item
            display: inherit
        .short-item
            display: none
        @media (max-width: 1024px)
            .long-item
                display: none
            .short-item
                display: inherit
        .nav-item
            margin: $nav-item-space
            padding: $nav-item-space calc(#{$nav-item-space} * 3 / 2)
            @media (max-width: 450px)
                margin: 0.1rem
                padding: 0.65rem calc(0.1rem * 3 / 2)
            display: inline-block
            font-size: $nav-font-size
            &.branding
                @media (max-width: 1024px)
                    /* padding and margin to minimum to avoid flex wrap */
                    padding: calc(#{$nav-item-space} * 2 * 1.25) 0 0 0
                    margin: 0
                    font-size: calc(#{$nav-font-size} / 1.25)
            font-family: 'MyBoldFont', sans-serif
            align-items: center
            .icon
                filter: $filter-body-color
                height: $nav-icon-size
                vertical-align: calc(#{$nav-font-size} - #{$nav-icon-size} + 1.5px)
            &#language-selection
                cursor: default
                transition: all 0.2s ease-in
                outline: 1px solid $nav-bg-color
                border-radius: 0 $border-radius-lg 0 $border-radius-lg
                &:focus
                    outline: 1px solid $nav-hover-bg-color
        .limit-width, .limit-width .nav-item
            @media (max-width: 1110px)
                /* reduce size to fit long titles into one line */
                font-size: calc(#{$nav-font-size} / 1.25)
        a
            text-decoration: none
            color: $body-color !important
            border-radius: 0 $border-radius-lg 0 $border-radius-lg
            &:hover,
            &:focus
                background-color: $nav-hover-bg-color
        .applause-feedback
            display: flex

.tippy-box[data-theme~='dropdown-list']
    ul
        list-style: none
        text-align: center
        li
            .lang-item
                font-size: 1rem
                padding: 5px 9px /* same as the tippy style */
                margin: 5px 0
                border-radius: 0 $border-radius-lg 0 $border-radius-lg
                $mute-color: #6d6d6d
                border: 1px solid $mute-color
                color: $mute-color
            a.lang-item
                color: #fff !important
                display: block
                text-decoration: none
                border: 1px solid $body-color
                &:hover,
                &:focus
                    background-color: $body-color
                    border: 1px solid #fff

header nav
    top: 0

footer nav
    bottom: 0
    &.nav-photo
        @media (max-width: 1024px) and (orientation: landscape)
            right: 0

